--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Especialistas em desenvolvimento de aplicativos e soluções web sob medida para impulsionar negócios digitais">
     
     <!-- ========== FAVICON CONFIGURATION ========== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
-    <link rel="manifest" href="public/site.webmanifest">
-    <link rel="icon" href="public/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/midia_lp/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/midia_lp/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/midia_lp/favicon-16x16.png">
+    <link rel="manifest" href="/static/midia_lp/site.webmanifest">
+    <link rel="icon" href="/static/midia_lp/favicon.ico">
     <meta name="theme-color" content="#c62da5">
     <!-- ========== END FAVICON ========== -->
 
@@ -1112,7 +1112,7 @@
         <div class="container">
             <nav class="nav-container">
                 <a href="#" class="logo">
-                    <img src="public/logo.png" alt="WP Web Soluções" class="logo-image" style="width: 10%;">
+                    <img src="/static/midia_lp/logo.png" alt="WP Web Soluções" class="logo-image" style="width: 10%;">
                     WP Web Soluções
                 </a>
                 
