--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
     <!-- ========== END FAVICON ========== -->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/chat.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/responsive.css">
+    <link rel="stylesheet" href="static/css/chat.css">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -1131,9 +1131,9 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
-    <script src="js/portfolio.js"></script>
-    <script src="js/chat-ia.js"></script>
-    <script src="js/chat-websocket.js"></script>
+    <script src="static/js/main.js"></script>
+    <script src="static/js/portfolio.js"></script>
+    <script src="static/js/chat-ia.js"></script>
+    <script src="static/js/chat-websocket.js"></script>
 </body>
 </html>
