--- a/templates/index.html
+++ b/templates/index.html
@@ -209,7 +209,7 @@
                 <h2 class="section-title">Nosso Portfólio</h2>
                 <p class="section-subtitle">
                     Conheça alguns dos projetos que desenvolvemos utilizando nossa stack tecnológica: 
-                    HTML5, CSS, JavaScript, Flutter, Python, FastAPI, MongoDB e Integração com IA.
+                    HTML5, CSS, JavaScript, Flutter, Python, FastAPI, MongoDB e Integração com IA
                 </p>
             </div>
             
